terminator 1.92-py3-dev:
  Features
    * None

  Enhancements
    * Updated code to use Python 3
    * Updated all translations from Launchpad repo
  
  Bug Fixes
    * Fix duplication of characters while broadcasting when ibus is running
    * Fix Custom Commands plugin
    * Remove the ability to set window classname, as function in gtk is now deprecated (Steve Boddy Launchpad rev 1758)
    * Fix middle-click paste to receivers that was accidentally broken by fix for LP:1647507 (Steve Boddy Launchpad rev 1765)
    * Fix hide on lose focus due to our own menus and Preferences (Juliano Fischer Naves + Steve Boddy Launchpad rev 1769)
    * Fix case where intltool-merge is missing that causes an exception when trying to install with setup.py (Steve Boddy Launchpad rev 1771)


terminator 1.91:
  Features
    * None

  Enhancements
    * Update and fixes for the generic terminator.spec file used by
      downstreams for RPM generation
    * Allow the use of larger separator sizes (Egmont Koblinger,
      LP#1522575)
    * Add the gruvbox light/dark palettes as themes.
    * Updated the preferences window to a modern version of glade.
      Better spacing, layout etc.
    * Fix the background transparency, also allowing per theme
      CSS fixes and styling tweaks. (LP#1599453)
    * Enable the use of the hyper key as a modifier in shortcuts.
      (Steven Keuchel, LP#1362229)
    * Displays confirmation dialog when a single term is
      zoomed/maximised (minoru/shiraeeshi, LP#1531933)
    * Add keywords entry to the desktop file (Julián Moreno Patiño,
      LP#1241052)
    * Add subtrees to custom commands menu - just add '/' to split
      (LP#1631759)
    * Normalise display name when creating DBus name (Andrea
      Corbellini, LP#1267195)
    * Remove auto-capitalisation of profiles in menu and add sorting
      (LP#1521301)

  Bug Fixes
    * Fix missing dependencies in debian/control (LP#1644155,
      LP#1644560)